# Churn-Modelling-Pipeline

./: README.md  metrics.txt  pyproject.toml  requirements.txt  train.py
.github/workflows/: main.yml
